registration, auth system

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -49,10 +49,10 @@
         </div>
         <div class="input-group mb-3">
           <input
-            formControlName="retypePassword"
+            formControlName="confirmPassword"
             type="password"
             class="form-control"
-            placeholder="Retype password"
+            placeholder="Confirm password"
           />
           <div class="input-group-append">
             <div class="input-group-text">
