--- a/src/app/pages/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/pages/main/menu-sidebar/menu-sidebar.component.html
@@ -53,6 +53,15 @@
             </p>
           </a>
         </li>
+        <li class="header">Quests</li>
+        <li class="nav-item">
+          <a [routerLink]="['/quests']" class="nav-link">
+            <i class="nav-icon fas fa-tachometer-alt"></i>
+            <p>
+              Quests
+            </p>
+          </a>
+        </li>
         <li class="nav-item">
           <a [routerLink]="['/blank']" class="nav-link">
             <i class="nav-icon fas fa-tachometer-alt"></i>
