--- a/src/app/views/quest/quests/quest-form/quest-form.component.html
+++ b/src/app/views/quest/quests/quest-form/quest-form.component.html
@@ -1,21 +1,36 @@
-<form (ngSubmit)="onSubmit(quest)">
-  <div class="form-group">
-    <label for="countryName">Quest name</label>
-    <input [(ngModel)]="quest.name" id="countryName" class="form-control" name="name">
-  </div>
-  <div class="form-group">
-    <label for="countryUuid">Country</label>
-    <select [(ngModel)]="quest.countryUuid" id="countryUuid" class="form-control" name="countryUuid">
+<div class="row">
+  <div class="col-sm-6">
+    <div class="box">
+      <form (ngSubmit)="onSubmit(quest)">
+        <div class="form-group">
+          <label for="countryName">Quest name</label>
+          <input [(ngModel)]="quest.name" id="countryName" class="form-control" name="name">
+        </div>
+        <div class="form-group">
+          <label for="countryUuid">Country</label>
+          <select [(ngModel)]="quest.countryUuid" id="countryUuid" class="form-control" name="countryUuid">
 
-    </select>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="cityUuid">City</label>
+          <input [(ngModel)]="quest.countryUuid" id="cityUuid" class="form-control" name="cityUuid">
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <ckeditor id="description" [(ngModel)]="quest.description" [editor]="editor" data="quest.description"
+                    [ngModelOptions]="{standalone: true}"></ckeditor>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="cityUuid">City</label>
-    <input [(ngModel)]="quest.countryUuid" id="cityUuid" class="form-control" name="cityUuid">
+  <div class="col-sm-6">
+    <div *ngFor="let questionEntity of quest.questionEntities; let i = index" class="box">
+      <app-question-form [questionEntity]="questionEntity" [index]="i" (questionEvent)="saveQuestion($event, i)" (deleteEvent)="deleteQuestion($event)"></app-question-form>
+    </div>
+    <div class="box">
+      <button class="btn btn-primary" (click)="addQuestion()">Add question</button>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="description">Description</label>
-    <ckeditor id="description" [(ngModel)]="quest.description" [editor]="editor" data="quest.description" [ngModelOptions]="{standalone: true}"></ckeditor>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
